force-app/main/default/objects/Budget_Allocation__c/Budget_Allocation__c.object-meta.xml
<CustomObject>
    <label>Budget Allocation</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Budget Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>