force-app/main/default/objects/Budget_Allocation__c/fields/Mobility_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Mobility_Initiative__c</fullName>
    <label>Mobility Initiative</label>
    <referenceTo>Mobility_Initiative__c</referenceTo>
    <relationshipLabel>Budget Allocations</relationshipLabel>
    <relationshipName>Budget_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>