force-app/main/default/objects/Budget_Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Mobility_Initiative__c</columns>
    <columns>Budget_Type__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Financial_Year__c</columns>
    <columns>Budget_Status__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>